--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1606,107 +1606,107 @@ stories:
   domain: http://bigbeargrizzly.net/
   link: http://www.bigbeargrizzly.net/good-morning-big-bear/image_e2bff906-2326-11ea-bc2a-632728083df6.html
 images:
-- name: window-window-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-yellow-collage.jpg
-- name: downtown-los-angeles-downtown-la-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-oily-mcoilface.JPG
-- name: containership-containership-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-nazi-poster.jpg
-- name: liberty-back-statue-liberty-back-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kand-two.jpg
-- name: cargo-ship-cargo-ship-on-sea-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-bright-sand.jpg
-- name: miamibeach-miamibeach-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-light-dali.jpg
-- name: white-house-lawn-white-house-window-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smooth-ride.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
-- name: old-barn-old-barn-1500-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-ww2-dresden.jpg
-- name: scream-IMG_8331.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8331.jpg
-- name: walled-garden-walled-garden-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-aqua.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-aqua.JPG
-- name: oldhotel-oldhotel-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-dream.jpg
-- name: stalin-time-downtown-125thstreet.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-125thstreet.jpg
-- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
-- name: stories-mosaic-face-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit.jpg
-- name: wreck-IMG_6965.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6965.jpg
-- name: abandonedbuildings_cinnamon_rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_cinnamon_rolls.jpg
-- name: mistywoods-babyfoot-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-alien-goggles.jpg
-- name: status-berlin-status-berlin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-deep-connections.jpg
-- name: containership-containership-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
-- name: border-crossing-bordercrossing-emily-carr.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-emily-carr.png
-- name: bf-skinner-through-berlin-wall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-through-berlin-wall.jpg
-- name: dragon-desert-desert-dragon-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-neo-instinct.jpg
-- name: locked-up-steam-lock-up-steam-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-wols.jpg
-- name: old-door-lock-old-door-lock-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crabapple.jpg
-- name: copper-circuit-DSC_0001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0001.jpg
-- name: copper-circuit-san-francisco-skyline-smoke.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-skyline-smoke.jpg
-- name: lincoln-memorial-lincolnmemorial-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dark-rain.jpg
-- name: fence-mexico-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-paper.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-- name: razorwire-DSC-0080-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-sand-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-constitution.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit.JPG
-- name: walled-garden-walled-garden-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-propaganda-leaflets.jpg
-- name: nyc-flag-nycflag-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-clean-view.jpg
-- name: containership-containership-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-missle.jpg
-- name: ellis-island-ellisisland-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-plentiful.jpg
-- name: server-racks-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
-- name: lincoln-memorial-lincolnmemorial-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-monet-one.jpg
-- name: oldhouse-granaryfield.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield.jpg
-- name: downtown-fredericksburg-marcel-duchamp.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-marcel-duchamp.JPG
-- name: locked-up-steam-lock-up-steam-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-deep-connections.jpg
-- name: white-house-whitehouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sand-paper.jpg
-- name: mediterranean-mediterranean-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-circuit.jpg
-- name: bf-skinner-underground-subway_36342747010_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-underground-subway_36342747010_o.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
-- name: old-granary-field-granaryfield-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-dali.jpg
-- name: bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-- name: blossombar-crafty-painting-file-00-00-50-58.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-58.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
+- name: miamibeach-miamibeach-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-nazi-poster.jpg
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: udnie-IMG_2971.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_2971.jpg
+- name: la-muse-cemetery_35902984304_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cemetery_35902984304_o.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-neo-instinct.jpg
+- name: locked-up-steam-lock-up-steam-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-electricity.jpg
+- name: adam-smith-adam-smith-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-smoking-cigarette.jpg
+- name: border-fence-border-fence-on-hill-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-space-pizza.jpg
+- name: oldhotel-oldhotel-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dali-two.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
+- name: old-door-lock-old-door-lock-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kandinsky-bv.jpg
+- name: old-gas-pumps-oldgaspumps-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-three.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
+- name: oldhotel-oldhotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel.jpg
+- name: old-granary-field-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
+- name: beach-clouds-lifeguard-beachclouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-clean-view.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-green-zuma.jpg
+- name: window-window-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-kand-two.jpg
+- name: udnie-P6180010.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P6180010.jpg
+- name: old-church-oldchurch-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-pond.jpg
+- name: nazi-invasion-seattle-looking-north.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-looking-north.jpg
+- name: ellis-island-ellisisland-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-atari-asteroids.jpg
+- name: downtheline-downtheline-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alien-goggles.jpg
+- name: bf-skinner-castle-on-the-hill-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-castle-on-the-hill-windows.jpg
+- name: white-house-lawn-white-house-window-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-pablo-blue.jpg
+- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+- name: walled-garden-walled-garden-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kand-two.jpg
+- name: rockingchair-rockingchair-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crafty-painting.jpg
+- name: windowmountain-window-mountain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-nazi-poster.jpg
+- name: old-barn-old-barn-1500-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-hot-spicy.jpg
+- name: power-lines-power-lines-empty-space-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-oily-mcoilface.jpg
+- name: braceros-domingo-ulloa-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-grafitti-woman-bangs.jpg
+- name: powerlines-power-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-constitution.jpg
+- name: trucksilo-trucksilo-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-graham-sutherland.jpg
+- name: sand-hand-sand-hand-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-granite.jpg
+- name: amusement-park-amusement-park-2-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-cinnamon-rolls.jpg
+- name: docks-docks-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-umberto-bocc.jpg
+- name: nazi-invasion-freeway-carss-overpass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-freeway-carss-overpass.jpg
+- name: border-crossing-bordercrossing-monet-one.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-monet-one.png
+- name: downtheline-downtheline-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
+- name: white-house-lawn-white-house-lawn-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dark-soul.jpg
+- name: downtown-los-angeles-downtown-la-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-emily-carr.JPG
+- name: nazi-invasion-old-building-phoenix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-phoenix.jpg
+- name: walled-garden-walled-garden-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-internet-numbers.jpg
+- name: stories-new-machine-road-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-blue-circuit-4.jpg
+- name: oldcabin-oldcabin-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-ww2-dresden.jpg
+- name: server-cloud-server-racks-door-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-dream.jpg
+- name: old-barn-old-barn-1500-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-space-pizza.jpg
+- name: beach-rocks-beach-rocks-currents-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-dali.jpg
+- name: bf-skinner-old-gas-station_35891228584_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-gas-station_35891228584_o.jpg
 ---
 Amazon Prime Da Acceso Con Descuento A Personas Que Reciben Ayuda Del Gobierno.&nbsp;Cards Football Set To Go Bowling In Nashville.&nbsp;Soldier's Homecoming Surprises Little Sister.&nbsp;Members Of Salida Brass.&nbsp;Central Minnesota Weathers Flu Wave As Schools Head Into Christmas Break.&nbsp;Venice's Royal Gardens Restored, Reopened.&nbsp;Elk Rapids Joins Coastline Effort For Emergency Declaration.&nbsp;Falcon Grapplers Host Meet.&nbsp;
